# lllmd

./: .env.example  .gitignore  BioMistral_BioMistral-7B_summary.json  README.md  app.py  check_cuda.py  diagnosis_report_0.json  draft.ipynb  draft.py  final_summary_0.json  index.html  m42-health_Llama3-Med42-8B_summary.json  main.py  patient_notes_modified.csv  patient_notes_modified_2.csv  pyproject.toml
modules/data/: data_handler.py
modules/interface/: agent_rag.py  summary_llm.py
notebook/: demonstration.ipynb
src/: check_cuda.py
